NEWS for the OpenCL package

0.1-1	(under development)
    o	improve memory management and clean up on error in oclRun()

    o	add support for native single precision representation
	(see ?clFloat and native.result argument in oclRun())

    o	added INSTALL file with links to common OpenCL implementations


0.1-0	2011-08-08
    o	first public release

	includes support for single and double precision computations
	as well as simple kernels (one output vector, arbitrary input)
