@@ -3,6 +3,9 @@ NEWS for the OpenCL package
 0.1-1	(under development)
     o	improve memory management and clean up on error in oclRun()
 
+    o	use CL_MEM_USE_HOST_PTR instead of clEnqueueWriteBuffer() for
+	better performance on large input vectors
+
     o	add support for native single precision representation
 	(see ?clFloat and native.result argument in oclRun())
 
